<resources>
    <string name="app_name">ShareLetter</string>
    <string name="letter_address">Address:</string>
    <string name="letter_subject">Subject:</string>
    <string name="share_email">E-mail:</string>
    <string name="share_subjects">Subjects:</string>
    <string name="share_button_text">Share</string>
    <string name="share_body">Body:</string>
    <string name="share_add_photo">Add Photo</string>
    <string name="share_enter_address">Enter email address</string>
    <string name="share_enter_subjects">Enter subjects</string>
    <string name="share_enter_text">Enter you text</string>

    <string name="menu_add_letter">New letter</string>
    <string name="menu_delete_letter">Delete letter</string>
    <string name="menu_back">Back</string>

    <string name="digit_keyboard_font_tatiana">fonts/TatianaCTTNormal.ttf</string>
    <string name="digit_keyboard_font_tagir">fonts/tagir.ttf</string>
    <string name="digit_keyboard_font_toms">fonts/toms.ttf</string>
    <string name="digit_keyboard_font_roman">fonts/roman.ttf</string>
    <string name="menu_delete_all_letters">Delete all letter</string>
    <string name="dialog_delete_all_title">Remove all letters?</string>
    <string name="dialog_delete_all_yes">Yes</string>
    <string name="dialog_delete_all_no">No</string>
    <string name="dialog_photo_camera">Camera</string>
    <string name="dialog_photo_gallery">Gallery Photo</string>
    <string name="dialog_photo_cancel">Cancel</string>
    <string name="snackbar_msg_turn_internet">Turn on your internet connection</string>

</resources>
