<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">
    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@android:drawable/ic_menu_camera"
        android:scaleType="fitCenter"
        android:id="@+id/imgBtn"
        android:background="@drawable/background_for_button"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_add_photo"
        android:clickable="false"
        android:id="@+id/tvAddPhoto"
        android:layout_alignBottom="@+id/imgBtn"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_email"
        android:id="@+id/tvEmail"
        android:layout_marginTop="5dp"
        android:layout_below="@id/imgBtn"
        style="@style/activity_share_margin"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        style="@style/activity_share_margin"
        android:layout_below="@id/tvEmail"
        android:hint="@string/share_enter_address"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:background="@drawable/background_edittext"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_subjects"
        android:id="@+id/tvSubjects"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="10dp"
        style="@style/activity_share_margin"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSubjects"
        android:inputType="textEmailSubject"
        android:layout_marginTop="5dp"
        style="@style/activity_share_margin"
        android:layout_below="@id/tvSubjects"
        android:hint="@string/share_enter_subjects"
        android:textColor="@color/colorBlack"
        android:background="@drawable/background_edittext"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_body"
        android:id="@+id/tvBody"
        android:layout_below="@id/etSubjects"
        android:layout_marginTop="10dp"
        style="@style/activity_share_margin"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etBody"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tvBody"
        android:hint="@string/share_enter_text"
        android:textColor="@color/colorBlack"
        android:background="@drawable/background_edittext"
        android:padding="5dp"
        style="@style/activity_share_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/activity_share_margin"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnShare"
        android:text="@string/share_button_text"
        android:gravity="center"
        android:background="@drawable/background_for_button"/>


</RelativeLayout>